Fixed the extra margin at bottom & spacing in list

--- a/blocks/footer/__list/footer__list.css
+++ b/blocks/footer/__list/footer__list.css
@@ -5,6 +5,7 @@
   list-style: none;
   padding-left: 0;
   margin: 0;
+  column-gap: 18px;
 }
 @media screen and (max-width: 768px) and (min-width: 321px) {
   .footer__list {
