--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,20 +4,20 @@
 @import url(./__copyright/footer__copyright.css);
 
 .footer {
-  max-width: 928px;
-  min-height: 18px;
-  margin-top: 64px;
+  max-width: 1184px;
+  margin-top: 92px;
+  margin-right: 48px;
+  margin-left: 48px;   
   display: grid;
   grid-template-columns: repeat(1, 1fr) 168px;
+  padding-bottom: 24px;
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 1024px) {
   .footer {
-    max-width: 1184px;
-    margin-top: 92px;
-    margin-right: 48px;
-    margin-left: 48px;  
-    margin-bottom: 24px; 
+    max-width: 928px;
+    min-height: 18px;
+    margin-top: 64px;
   }
 }
 
@@ -28,7 +28,6 @@
     margin-right: 24px;
     margin-left: 24px;   
     max-width: 720px;
-    padding-bottom: 24px;
   }
 }
 
